Fix issues with broken nav on mobile screens

--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -2,10 +2,9 @@
     background-color: $primary-color;
     width: 100%;
     min-height: 80px;
-    height: auto;
 
     margin: 0;
-    padding: 24px 0 0 0;
+    padding: 16px 0 0 0;
 
     .container {
         display: flex;
@@ -15,8 +14,6 @@
 
     &__list {
         list-style-type: none;
-
-        height: 100%;
 
         padding: 0;
 
@@ -46,6 +43,8 @@
 
 @media screen and (max-width: 600px) {
     .nav {
+        padding: 0;
+
         .container {
             flex-flow: column;
         }
@@ -56,7 +55,7 @@
 
             &__element {
                 margin-left: 0;
-                margin-top: 24px;
+                margin-top: 16px;
             }
         }
     }
