--- a/sass/_root.scss
+++ b/sass/_root.scss
@@ -2,7 +2,7 @@ html, body {
     padding: 0;
     margin: 0;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
 
     font-size: 16px;
     font-family: "RobotoRegular", Helvetica, sans-serif;
@@ -11,7 +11,8 @@ html, body {
 body {
     background-color: #ccc;
 
-    min-height: 100%;
+    height: 100%;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: stretch;
